Update node-red app and pkg for tutorials

--- a/node-red/node-red-app.conf
+++ b/node-red/node-red-app.conf
@@ -1,5 +1,5 @@
 name: "node-red-app"
-namespace: "/sandbox/admin"
+namespace: "/sandbox/lparis"
 staging_pipeline: "/apcera::nodejs"
 start_cmd: "sudo node $NODERED_HOME/red.js"
 package_dependencies: [ "package.node-red-0.10.10" ]
@@ -9,7 +9,7 @@ ports: [
 		routes: [
 			{
 				type: "http",
-				endpoint: "node-red.smokey.apcera-platform.io"
+				endpoint: "node-red.<cluster-name>.apcera-platform.io"
 			}
 		]
 	}
