Adding manifest with APCFS

--- a/jenkins/myapp.json
+++ b/jenkins/myapp.json
@@ -48,6 +48,12 @@
         },
         "HTTP": {
           "fqn":    "service::/apcera::http"
+        },
+        "NFS": {
+            "fqn": "service::/sandbox/demo::jenkins-master-nfs",
+            "params": {
+              "mountpath": "/root/.jenkins"
+            }
         }
       },
       "exposed_ports": [ 8080 ],
@@ -67,6 +73,11 @@
       ]
     }
   },
+  "services": {
+          "service::/sandbox/demo::jenkins-master-nfs": {
+              "provider_fqn": "provider::/apcera/providers::apcfs"
+          }
+      },
   "networks": {
     "network::/sandbox/demo::jenkins": {
       "jobs": [
