Updated with review fixes

--- a/example-elk-stack/kibana/kibana-4.6.2.conf
+++ b/example-elk-stack/kibana/kibana-4.6.2.conf
@@ -49,5 +49,5 @@ build (
 	cd /opt/apcera/
 	ln -s kibana-4.6.2-linux-x86_64 kibana
 
-	chown -R runner /opt/apcera/kibana-4.6.2-linux-x86_64/
+	chown -R runner:runner /opt/apcera/kibana-4.6.2-linux-x86_64/
 )
