--- a/example-elk-stack/logstash/syslog-sample-app/pipeline.conf
+++ b/example-elk-stack/logstash/syslog-sample-app/pipeline.conf
@@ -23,7 +23,7 @@ filter {
 output {
     elasticsearch {
         user => "logstash"
-        password => "logstash-passwd"
+        password => "logstash-password"
 		hosts => [
 		{{range bindings}}{{if .URI.Scheme}}"{{.URI.Host}}:{{.URI.Port}}"{{end}}{{end}}
 		]
