add openjdk to get around some problems with older jdk 1.8
this is also an interim checkin, so I can see how the links render on GH

--- a/example-elk-stack/elasticsearch/elasticsearch-2.4.1.conf
+++ b/example-elk-stack/elasticsearch/elasticsearch-2.4.1.conf
@@ -5,11 +5,11 @@
 #   package for elasticsearch
 #
 # Installation
-#   apc package delete /apcera/pkg/packages::elasticsearch-shield2.4.1 -q 
-#   apc package build elasticsearch-shield-2.4.1.conf --batch
+#   apc package delete /apcera/pkg/packages::elasticsearch-2.4.1 -q 
+#   apc package build elasticsearch-2.4.1.conf --batch
 #
 
-name:      "elasticsearch-shield-2.4.1"
+name:      "elasticsearch-2.4.1"
 version:   "2.4.1"
 namespace: "/apcera/pkg/packages"
 
@@ -22,10 +22,9 @@ depends  [ { os: "ubuntu-14.04" },
 			{ runtime: "java-1.8"}
 		 ]
 provides      [ { package: "elasticsearch" },
-                { package: "elasticsearch-shield" },
-                { package: "elasticsearch-shield-2" },
-                { package: "elasticsearch-shield-2.4" },
-                { package: "elasticsearch-shield-2.4.1" }]
+                { package: "elasticsearch-2" },
+                { package: "elasticsearch-2.4" },
+                { package: "elasticsearch-2.4.1" }]
 
 environment {
 	"PATH": "/opt/apcera/elasticsearch/bin:$PATH"
@@ -44,13 +43,13 @@ build (
 	tar -C /opt/apcera -xvf elasticsearch-2.4.1.tar.gz
 	chmod a+x start-elasticsearch.sh
 	cp start-elasticsearch.sh /opt/apcera/elasticsearch-2.4.1/bin/.
-	
-    echo "Installing Shield"
-    
-    cd /opt/apcera/elasticsearch-2.4.1
-    ./bin/plugin install elasticsearch/license/latest
-    ./bin/plugin install elasticsearch/shield/latest
-	
+
+	echo "Installing Shield"
+
+	cd /opt/apcera/elasticsearch-2.4.1
+	./bin/plugin install elasticsearch/license/latest
+	./bin/plugin install elasticsearch/shield/latest
+
 	chown -R runner:runner /opt/apcera/elasticsearch-2.4.1
 	cd /opt/apcera
 	ln -s elasticsearch-2.4.1 elasticsearch
