--- a/example-elk-stack/logstash/logstash-2.4.0.conf
+++ b/example-elk-stack/logstash/logstash-2.4.0.conf
@@ -19,8 +19,8 @@ sources [
 ]
 
 depends  [ { os: "ubuntu-14.04" },
-			{ runtime: "java-1.8"}
-		 ]
+           { runtime: "java-1.8"} ]
+	   
 provides      [ { package: "logstash" },
                 { package: "logstash-2" },
                 { package: "logstash-2.4" },
@@ -30,22 +30,13 @@ environment {
 	"PATH": "/opt/apcera/logstash/bin:$PATH"
 			}
 
-# CSV list of files to upload with the package
-include_files [
-"start-logstash.sh"
-	]
-	
 cleanup [
           "/root"
         ]
 
 build (
-	chmod a+x start-logstash.sh
-
 	mkdir -p /opt/apcera
 	tar -C /opt/apcera/ -xzf logstash-2.4.0.tar.gz
-
-	cp start-logstash.sh /opt/apcera/logstash-2.4.0/bin/
 
 	cd /opt/apcera/
 	ln -s logstash-2.4.0 logstash
