Upgrade to the 5.0 stack and add more kibana shots (#61)
* Upgrade to the 5.0 stack and add more kibana shots

* Updated after review - adding sample app

* don't use real IP

* fix indent

* simple omit was in two places

* forgot to update the tree part

* forgot to remove the images from tree

* Upgrade to the 5.0 stack and add more kibana shots

* Git, stop changing my files back

* added on blurb about beats and a teaser for a next post

* fix a word

* Updated after dnb's comments

--- a/example-elk-stack/logstash/syslog-sample-app/continuum.conf
+++ b/example-elk-stack/logstash/syslog-sample-app/continuum.conf
@@ -27,16 +27,7 @@ ports: [
 		routes: [
 			{
 				type: "tcp",
-				# Sadly, can't use "auto" AND specify port
-				# endpoint: "auto:888"
-				#
-				# This is for prove
-				#
-				# endpoint: "52.7.157.82:8888",
-				#
-				# This is for hybrid
-				#
-				endpoint: "52.27.133.114:8888",
+				endpoint: "auto",
 				weight: 0.0
 			}
 		]
