--- a/example-elk-stack/logstash/syslog-sample-app/pipeline.conf
+++ b/example-elk-stack/logstash/syslog-sample-app/pipeline.conf
@@ -12,7 +12,7 @@ filter {
     geoip {
       source => "remoteip"
       target => "geoip"
-      database => "/opt/apcera/logstash/GeoLiteCity.dat"
+      database => "/opt/apcera/logstash/GeoLite2-City.mmdb"
       add_field => [ "[geoip][coordinates]", "%{[geoip][longitude]}" ]
       add_field => [ "[geoip][coordinates]", "%{[geoip][latitude]}"  ]
     }
