--- a/example-elk-stack/openjdk/openjdk-1.8.0-u91-b14.conf
+++ b/example-elk-stack/openjdk/openjdk-1.8.0-u91-b14.conf
@@ -1,6 +1,6 @@
 # To install this:
 #
-#     apc package build openjdk-1.8.conf
+#     apc package build openjdk-1.8.0-u91-b14.conf --batch
 #
 
 name:      "openjdk-1.8.0-u91-b14"
