--- a/example-elk-stack/openjdk/openjdk-1.8.0-ppa.conf
+++ b/example-elk-stack/openjdk/openjdk-1.8.0-ppa.conf
@@ -1,9 +1,9 @@
 # To install this:
 #
-#     apc package build openjdk-1.8.0-u91-b14.conf --batch
+#     apc package build openjdk-1.8.0-ppa.conf --batch
 #
 
-name:      "openjdk-1.8.0-u91-b14"
+name:      "openjdk-1.8.0-ppa"
 version:   "1.8.0"
 namespace: "/apcera/pkg/runtimes"
 
@@ -11,8 +11,7 @@ depends  [ { os: "linux" } ]
 provides [ { runtime: "java" },
            { runtime: "java-1.8" },
            { runtime: "java-1.8.0" },
-           { runtime: "java-1.8.0-u91" },
-           { runtime: "java-1.8.0-u91-b14" } ]
+           { runtime: "java-1.8.0-ppa" } ]
 
 environment { "PATH": "/usr/lib/jvm/java-8-openjdk-amd64/bin:$PATH",
               "JAVA_HOME": "/usr/lib/jvm/java-8-openjdk-amd64" }
@@ -22,5 +21,5 @@ build (
 	apt-get install --yes software-properties-common python-software-properties
 	add-apt-repository --yes ppa:openjdk-r/ppa
 	apt-get update
-	apt-get --yes --no-install-recommends install openjdk-8-jdk=8u91-b14-0ubuntu4~14.04
+	apt-get --yes --no-install-recommends install openjdk-8-jdk
 )
