Update namespace to use default namespace.

--- a/example-ruby-manifest/continuum.conf
+++ b/example-ruby-manifest/continuum.conf
@@ -8,7 +8,8 @@ name: "example-ruby-manifest"
 
 # Namespace to which the app belongs
 # Default: Current Namespace
-namespace: "/"
+# To change the namespace, uncomment the line below and update it with the desired namespace.
+# namespace: "/"
 
 # Number of app instances to start on creation
 # Default: 1
