--- a/apcera-job-scaler/continuum.conf
+++ b/apcera-job-scaler/continuum.conf
@@ -11,7 +11,12 @@ name: "apcera-job-scaler"
 instances: 1
 
 # Port definition
-disable_routes: true
+ports: [
+    {
+        number: 8080,
+        optional: true
+    }
+]
 
 # Services to create and bind to the app.
 # Providers must be registered prior to app creation.
@@ -25,10 +30,10 @@ services [
 
 # App Environment Variables;
 env {
-   "API_ENDPOINT": "api.kiso.io",
-   "TARGET_JOB": "job::/sandbox/tim.statler::example-go",
+   "API_ENDPOINT": "api.<cluster.domain>",
+   "TARGET_JOB": "job::/::example-go",
    "SCALING_FREQ": "30",
-   "CPU_ROOF": "50",
+   "CPU_ROOF": "80",
    "CPU_FLOOR": "20",
    "MAX_INSTANCES": "20",
    "MIN_INSTANCES": "1",
@@ -42,3 +47,7 @@ timeout: 120
 resources {
     memory: "2048MB"
 }
+
+# Start: boolean that determines if the app should start upon creation
+# Default: false
+start: true
