--- a/jenkins/jenkins-manifest.json
+++ b/jenkins/jenkins-manifest.json
@@ -27,7 +27,7 @@
         }
       },
       "env": {
-        "target": "http://jenkins.${CLUSTERNAME}"
+        "TARGET": "http://jenkins.${CLUSTERNAME}"
       },
       "state": "started",
       "instances": 1
@@ -37,7 +37,7 @@
         "image": "apcerademos/jenkins:latest"
       },
       "env": {
-        "target": "http://jenkins.${CLUSTERNAME}"
+        "TARGET": "http://jenkins.${CLUSTERNAME}"
       },
       "state": "started",
       "start": {
@@ -90,7 +90,7 @@
     }
   },
   "networks": {
-    "network::${NAMESPACE}::jenkins": {
+    "network::${NAMESPACE}::jenkins-network": {
       "jobs": [
         {
           "fqn": "job::${NAMESPACE}::jenkins-master",
