Updated app manifest for app auto-scaler
* Added GOPROJECT package environment variable. Per discussion with
Shatru, this avoids users getting Go build errors if
they don't have their Go development environment configured correctly, or at
all. This is important for Yoko's trainees who aren't Go developers and
just want to use the app.
* Also, to avoid WAMP/realm errors on startup due to missing app token policy, changed
 auto-scaler app to not start after deploy. The tutorial in the README instructs
 users to start the auto-scaler with APC, once they've added the
 necessary policy.

--- a/apcera-job-scaler/continuum.conf
+++ b/apcera-job-scaler/continuum.conf
@@ -23,6 +23,10 @@ services [
   },
 ]
 
+package_env {
+  GOPROJECT=/src/github.com/apcera/sample-apps/apcera-job-scaler
+}
+
 # App Environment Variables;
 env {
    "API_ENDPOINT": "api.<cluster.domain>",
@@ -38,7 +42,3 @@ env {
 # Timeout in seconds, allocated for app startup time (before timing out)
 # Default: 5 seconds
 timeout: 120
-
-# Start: boolean that determines if the app should start upon creation
-# Default: false
-start: true
