Added back "start: true" to manifest. Improved wording of comment for GOPROJECT app package environment variable.

--- a/apcera-job-scaler/continuum.conf
+++ b/apcera-job-scaler/continuum.conf
@@ -23,10 +23,6 @@ services [
   },
 ]
 
-package_env {
-  GOPROJECT=/src/github.com/apcera/sample-apps/apcera-job-scaler
-}
-
 # App Environment Variables;
 env {
    "API_ENDPOINT": "api.<cluster.domain>",
@@ -39,6 +35,17 @@ env {
    "INSTANCE_COUNTER": "1",
 }
 
+
 # Timeout in seconds, allocated for app startup time (before timing out)
 # Default: 5 seconds
 timeout: 120
+
+# Start: boolean that determines if the app should start upon creation
+# Default: false
+start: true
+
+# Set environment variable on application package so the Go stager can locate
+# package dependencies, regardless of where you cloned the sample app on your local system.
+package_env {
+    GOPROJECT=/src/github.com/apcera/sample-apps/apcera-job-scaler
+}
